[package]
name = "rust-todoapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # error handling
home = "0.5" # for find home dir
structopt = "0.3"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"] # We'll need the derive feature.

[dependencies.chrono]
version = "0.4"
features = ["serde"] # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
